# open-jobhunt

./: .gitignore  AGENTS.md  GUIDE.md  LICENSE  README.md  SETUP.md  config.example.yaml  pyproject.toml
context/: cover-letter.example.md  match-methodology.md  resume-profile.example.md
docs/: MCP-MAGIC.md
jobhunt/: __init__.py  cli.py  config.py  models.py  platform.py  runner.py
jobhunt/browser/: cookies.py  hh_urls.py  parse.py  session.py
jobhunt/core/: employer_qa.py  filters.py  letter.py  match_config.py  matching.py  report.py  resume_io.py  role_filter.py  vacancy_age.py
jobhunt/llm/: client.py
jobhunt/web/: browser_ui.py  launcher.py  server.py
jobhunt/web/static/: app.js  index.html  styles.css
prompts/: hh-autopilot.example.md  match-scoring.md
scripts/: generate_report.py  install.ps1  install.sh  publish-public.sh
scripts/macos/: install-dock-app.sh
skills/: stop-slop-writing.example.md
