[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-jobhunt"
version = "0.2.8"
description = "Локальный ассистент откликов на hh.ru — бесплатно, open source"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Open JobHunt Contributors" }]
keywords = ["jobhunt", "hh.ru", "playwright", "ollama", "automation"]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "playwright>=1.49",
  "rich>=13.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pypdf>=5.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
jobhunt = "jobhunt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobhunt*"]
